...
              ),
            );
          } else if (state is DashboardKependudukanLoaded) {
            final dashboard = state.dashboard;

            return SingleChildScrollView(
              key: const Key('list_warga'),
              padding: const EdgeInsets.all(16),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.stretch,
                children: [
                  // Header Section
                  Text(
...
