...
                    onRefresh: () async {
                      context.read<TagihanBloc>().add(
                        LoadTagihanPembayaranList(statusFilter: _filterStatus),
                      );
                    },
                    child: ListView.builder(
                      key: const Key('list_tagihan'),
                      padding: const EdgeInsets.all(16),
                      itemCount: tagihanList.length,
                      itemBuilder: (context, index) {
                        final tagihan = tagihanList[index];
                        return _buildTagihanCard(tagihan, theme);
                      },
...
